styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto, serif;
    margin: 0;
    box-sizing: border-box;
}

.content {
    max-width: 1200px;
    margin: auto;
}

/* header wrapper */
.header-wrapper, .welcome-wrapper {
    background: #1F2937;
}
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 40px;

}

.logo {
    width: 50px;
}

.menu ul {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding: 0;
    margin: 0;
}

ul a {
    list-style-type: none;
    color: #F9FAF8;
    text-decoration: none;
    font-weight: 700;
    padding: 10px 20px;
    margin: 0;
}

.menu-links a:hover {
    background-color: #13171f;
    transition: background-color .3s ease-in-out;
    border-radius: 20px;
    
}

/* welcome wrapper */
.welcome {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 40px 40px 60px;
    flex-wrap: wrap;
}

.welcome-left {
    max-width: 500px;
    color: #E5E7EB;
    font-size: 18px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 15px;
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 49px;
    color:#F9FAF8;
    font-weight: 900;
}

.light-text {
    line-height: 2;
    margin: 0;
}

.button {
    border: 2px solid #fa1228;
    background-color: #1F2937;
    color: #E5E7EB;
    border-radius: 30px;
    font-size: 18px;
    font-weight: 700;
    padding: 10px 20px;
    cursor: pointer;
}

.button:hover {
    background-color: #fa1228;
    transition: background-color .2s ease-in-out;
}

.link-button {
    align-self: flex-start;
    border-radius: 30px;
    margin-bottom: 15px;
}  

.image-placeholder {
    width: 500px;
    height: 250px;
    background-color: #c8c9c7;
    border-radius: 15px;
    margin-top: 10px;
    /* flex-shrink: 0; */
    
}

/* gallery wrapper */

.gallery-container, .cta-container {
    background-color: #F9FAF8;
}

.gallery {
padding: 40px;
}

.gallery h2 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    margin: 0 auto;
    text-align: center;
}

.gallery-tile {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 40px;
    margin-top: 40px;

}

.gallery-tile div {
    max-width: 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-top: 0;
}

.image-placeholder.image-tile {
    flex-shrink: 0;
    width: 200px;
    height: 200px;
}

.tile p {
    margin: 15px 0 0 0;
}

/* quote wrapper */

.quote-container {
    background-color: #E5E7EB;
}

.quote {
    padding: 150px;
}

/* cta wrapper */
.cta {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 40px;
}

.cta-box {
    width: 600px;
    padding: 30px;
    background-color: #3882F6;
    display: flex;
    flex-direction: column;
    border-radius: 20px;
    gap: 20px;
}

.cta-box h3 {
    color: #F9FAF8;
    font-size: 20px;
    margin: 0;
}

.cta-box p {
    color: #F9FAF8;
    margin: 0;
}

.cta-button.button {
    background-color: #3882F6;
    color: #F9FAF8;
}

.cta-button.button:hover {
    background-color: #fa1228;
    transition: background-color .2s ease-in-out;
}

a.link-button {
    margin: 0;
}

/* footer */
.footer {
    background-color: #1F2937;
    text-align: center;
    padding: 30px;
}

.footer p {
    font-size: 18px;
    color:#F9FAF8;
    margin: 0;
    padding: 0;
}

